# tinyusbmidi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  picomidi.c  plan.md  switch_pins.h.in  sysex_test_samples.md  tinyusbmidi.c  tusb_config.h  usb_descriptors.c
.github/workflows/: release.yml  static.yml
config-app/: README.md  app.js  eslint.config.js  index.html  midi-manager.js  package.json  style.css
enclosure/: picomidi v10.f3d
